--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading Data\n",
+    "## 1. Loading Data\n",
     "\n",
     "[Download](http://yann.lecun.com/exdb/mnist/) and extract data to folder `data/`."
    ]
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Neural Network\n"
+    "## 2. Train Single Layer Neural Network\n"
    ]
   },
   {
@@ -169,30 +169,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate\n",
-    "\n",
-    "#### Training Data"
+    "## 3. Test on Training Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_prediction(predict):\n",
+    "    ones = np.ones(10)\n",
+    "    ones.shape = (1, 10)\n",
+    "    return np.argmin(ones - predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Random weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8134166666666667\n"
+      "Accuracy: 0.10353333333333334\n"
      ]
     }
    ],
    "source": [
-    "def label_prediction(predict):\n",
-    "    ones = np.ones(10)\n",
-    "    ones.shape = (1, 10)\n",
-    "    return np.argmin(ones - predict)\n",
+    "random_weights = weights.copy()\n",
+    "np.random.shuffle(random_weights)\n",
     "\n",
+    "hit = 0\n",
+    "first_n = len(images)\n",
+    "for i in range(first_n):\n",
+    "    input_ = np.array(images[i])\n",
+    "    input_ = input_ / np.linalg.norm(input_)\n",
+    "    input_.shape = (1, 784) \n",
+    "    \n",
+    "    if labels[i] == label_prediction(predict(input_, random_weights)):\n",
+    "        hit += 1\n",
+    "\n",
+    "print(f\"Accuracy: {hit /first_n}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2 Trained weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8146333333333333\n"
+     ]
+    }
+   ],
+   "source": [
     "hit = 0\n",
     "first_n = len(images)\n",
     "for i in range(first_n):\n",
@@ -210,27 +259,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Testing Data"
+    "## 4. Test on Testing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load MNIST data\n",
+    "mndata = MNIST('data/')\n",
+    "images, labels = mndata.load_testing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1 Random Weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8169\n"
+      "Accuracy: 0.1025\n"
      ]
     }
    ],
    "source": [
-    "# Load MNIST data\n",
-    "mndata = MNIST('data/')\n",
-    "images, labels = mndata.load_testing()\n",
+    "hit = 0\n",
+    "first_n = len(images)\n",
+    "for i in range(first_n):\n",
+    "    input_ = np.array(images[i])\n",
+    "    input_ = input_ / np.linalg.norm(input_)\n",
+    "    input_.shape = (1, 784) \n",
+    "    \n",
+    "    if labels[i] == label_prediction(predict(input_, random_weights)):\n",
+    "        hit += 1\n",
     "\n",
+    "print(f\"Accuracy: {hit /first_n}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2 Trained weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8154\n"
+     ]
+    }
+   ],
+   "source": [
     "hit = 0\n",
     "first_n = len(images)\n",
     "for i in range(first_n):\n",
